--- a/src/components/DiBestSpot.css
+++ b/src/components/DiBestSpot.css
@@ -1,6 +1,6 @@
 .buttonCont {
     width: 100%;
-    height: 185px;
+    height:620px;
     padding: 49px 7px 7px 8px;
     justify-content: flex-end;
     align-items: center;
@@ -11,15 +11,35 @@
 .btnFather {
     display: flex;
     justify-content: center;
-    /* flex-direction: row; */
+}
+.dibestPri {
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: left;
+}
+.dibestMember {
+    color: white;
+    text-align: left;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
+.dibestVendor {
+    text-align: left;
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.dibestEmail {
+    text-align: left;
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 @media (max-width:600px) {
     .btnFather {
         display: block;
     }
 
     .buttonCont {
-        height: 35vh;
+        height: 135vh;
     }
 }
