--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -1,6 +1,6 @@
 .aboutUser {
     color: #000;
-text-align: justify;
+text-align: center;
 font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 font-size: 18px;
 font-style: normal;
@@ -23,6 +23,7 @@ line-height: normal;
 .about {
     padding-top: 5%;
     margin-left: 3%;
+    
 }
 .offer {
     color: #28285B;
@@ -47,6 +48,7 @@ width: 729px;
     width: 70%;
     padding: 3%;
     margin-left: 15%;
+    margin-top: -20%;
 }
 
 @media (max-width:600px) {
@@ -54,6 +56,7 @@ width: 729px;
         padding: 1px;
         margin: 5px;
     }
+
 
     .aboutUser {
         text-wrap:wrap;
@@ -64,7 +67,7 @@ width: 729px;
         text-align: center;
     }
     .mainOffer {
-        margin-top: 160%;
+        margin-top: -30%; 
         width: 70%;
     }
     .register {
