--- a/src/pages/Features.css
+++ b/src/pages/Features.css
@@ -20,10 +20,18 @@ margin-top: 15%;
 
 @media (max-width:600px) {
     .keyFeature {
-        margin-top: 20%;
+        margin-top: 40%;
     }
 
     .featureCard {
         display: block;
+    }
+
+    .cardy {
+        margin-left: 4%;
+        margin-bottom: 2%;
+        height: auto;
+        box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2)
+
     }
 }
