--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,6 +1,6 @@
 .startnow {
     margin-top :-320px;
-    margin-left:30%;
+    margin-left:16%;
 }
 .whydibest {
     width: 960px;
@@ -54,11 +54,21 @@ line-height: normal;
     color: #000;
 text-align: center;
 font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-size: 13px;
+font-size: 14px;
 font-style: normal;
-font-weight: 400;
+font-weight: 600;
 line-height: normal;
 /* text-align: center; */
+}
+.explore {
+    font-weight:800;
+    text-shadow:1px 1px rgb(49, 49, 47);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.welcome {
+    text-shadow:1px 1px rgb(49, 49, 47);
+    font-size: 4em;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 
@@ -90,32 +100,46 @@ line-height: normal;
     }
 
     .welcome {
-        font-size:1.5em;
+        font-size:230%;
         margin-left: -30%;
-        margin-top: -20%;
+        margin-top: -29%;
     }
 
     .explore {
-        margin-left: -30%;
-        font-size: 1em;
+        margin-left: -20%;
+        font-size: 160%;
+        margin-top: -5%;
+        padding: 4%;
+        text-align: center;
     }
 
     .startbtn {
-        margin-left: -30%;
+        margin-left: -20%;
+        margin-top: -20%;
     }
 
     .whydibest {
-        margin-left: 3%;
+        margin-left: 2%;
         width: 400px;
+        height: 43vh;
         margin-top: -52%;
         display: block;
+        padding: 1%;
     }
+    
     .whyText {
-        font-size: 1em;
+        font-size: 1.2em;
+    }
+    .whyCard {
+        height: 29vh;
+    }
+
+    .whyCardf {
+        font-size: large;
     }
     .cardDiv {
         display: flex;
-        margin-top: 10px;
+        margin-top: 15px;
     }
     
 }
