--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -4,6 +4,10 @@
     padding: 30px;
     color: white;
 }
+
+.footers {
+    background-color: #A78236;
+}
 .copy {
     margin-left: 40%;
     gap: 8px;
