--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -17,45 +17,56 @@
     font-size: 20px;
 }
 
-.signup {
-    color: #FFF;
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-size: 15px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-width: 25%;
-margin-left: 30%;
-margin-top: 5%;
+.platform2 {
+    /* margin-left: -1%; */
+    width: 25%;
 }
 
-.input {
-    background-color:transparent;
-    border: 2px solid  #473614;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-
-
+.noshow {
+    margin-left: 15%;
+    width: 25%;
 }
 
-.submit {
-    border-bottom-right-radius: 5px;
-    border-top-right-radius: 5px;
+.platform {
+    margin-left: 10%;
+    width: 25%;
 }
 
-.contactus {
+.contacty {
     margin-top: 15%;
     margin-left: -22.5%;
     width: 25%;
 }
+
+.imgs {
+    width: 60%;
+}
+.imgs1 {
+    width: 63%;
+    margin-top: -1%;
+    margin-left: -32%;
+}
+
+.input {
+    background-color: transparent;
+    border: thin solid ;
+}
+
+.submit {
+    margin-top: 2px;
+    margin-left: 30%;
+}
 @media (max-width:600px) {
     .footer {
-        padding: 0;
+        height: auto;
+        /* padding: 0; */
+        display: block;
+        padding: 2%;
     }
 
     .copy {
         margin-left: 15%;
-        margin-top: 10%;
+        margin-top: -10%;
     }
     .signup {
         margin-left: -95%;
@@ -69,14 +80,48 @@ margin-top: 5%;
     }
     .submit {
         padding: 5px;
+        margin-left: 5%;
     }
-    .contactus {
-        display: none;
+    .contacty {
+        margin-top: 15%;
+        margin-left: -262.5%;
+        width: 25%;
     }
-    .noshow {
-        display: none;
-    }
-    .platform {
+    .platform2 {
+        width: 100%;
+        text-align: center;
         margin: 0;
     }
+    
+    .noshow {
+        margin-left: -1%;
+        width: 100%;
+        text-align: center;
+    }
+    .unite {
+        display: block;
+    }
+    .platform {
+        margin-left: -1%;
+        margin-top: 10%;
+        /* margin: 0; */
+        width: 100%;
+        text-align: center;
+    }
+    .imgs {
+        width: 60%;
+        margin-left: 20%;
+    }
+    .imgs1 {
+        width: 64%;
+        margin-top: -2%;
+        margin-left: 32%;
+    }
+
+    .signup {
+        margin-left: 0;
+        margin-top: 10%;
+        margin-right: 0%;
+    }
+    
 }
