--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -2,7 +2,7 @@
     display: flex;
     background-color: #A78236;
     padding: 30px;
-    color: white;
+    /* color: white; */
 }
 
 .footers {
@@ -20,22 +20,29 @@
 .platform2 {
     /* margin-left: -1%; */
     width: 25%;
+    color: white;
+
 }
 
 .noshow {
     margin-left: 15%;
     width: 25%;
+    color: white;
+
 }
 
 .platform {
     margin-left: 10%;
     width: 25%;
+    color: white;
 }
 
 .contacty {
     margin-top: 15%;
     margin-left: -22.5%;
     width: 25%;
+    color: white;
+
 }
 
 .imgs {
@@ -55,6 +62,7 @@
 .submit {
     margin-top: 2px;
     margin-left: 30%;
+    
 }
 @media (max-width:600px) {
     .footer {
