--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -72,43 +72,22 @@ line-height: normal;
 }
 
 
-@media (max-width: 800px) {
-    .joinDB {
-        height: auto;
-        margin-top: 5%;
-        display: flex;
-        flex-direction: column;
-        padding: 3%;
-    }
-
-    .joinTxt {
-        margin-left: 0;
-    }
-
-    .shop,
-    .shop1,
-    .shop2,
-    .shop3,
-    .shopimg,
-    .shopimg1 {
-        width: 100%;
-        margin-left: 0;
-    }
-
+@media (max-width: 576px) {
+    
     .buttonCont {
         padding: 7px 8px;
     }
 
     .welcome {
-        font-size:230%;
-        margin-left: -30%;
-        margin-top: -29%;
+        font-size:170%;
+        margin-left: -15%;
+        margin-top: 35%;
     }
 
     .explore {
-        margin-left: -20%;
-        font-size: 160%;
-        margin-top: -5%;
+        margin-left: -15%;
+        font-size: 100%;
+        /* margin-top: ; */
         padding: 4%;
         text-align: center;
     }
@@ -119,27 +98,82 @@ line-height: normal;
     }
 
     .whydibest {
-        margin-left: 2%;
-        width: 400px;
-        height: 43vh;
-        margin-top: -52%;
+        margin-left: 0%;
+        width: 100%;
+        height: 75vh;
+        margin-top: -12%;
         display: block;
         padding: 1%;
     }
     
     .whyText {
-        font-size: 1.2em;
+        font-size: 1em;
+        padding: 0;
     }
     .whyCard {
         height: 29vh;
+        width: 70%;
+        margin-top: 2px;
     }
 
     .whyCardf {
         font-size: large;
     }
     .cardDiv {
-        display: flex;
+        display: block;
         margin-top: 15px;
     }
     
+}
+
+@media (max-width:425px) {
+    .buttonCont {
+        padding: 7px 8px;
+    }
+
+    .welcome {
+        font-size:170%;
+        margin-left: -15%;
+        margin-top: 35%;
+    }
+
+    .explore {
+        margin-left: -15%;
+        font-size: 100%;
+        /* margin-top: ; */
+        padding: 4%;
+        text-align: center;
+    }
+
+    .startbtn {
+        margin-left: -20%;
+        margin-top: -20%;
+    }
+
+    .whydibest {
+        margin-left: 0%;
+        width: 100%;
+        height: 75vh;
+        margin-top: -12%;
+        display: block;
+        padding: 1%;
+    }
+    
+    .whyText {
+        font-size: 1em;
+        padding: 0;
+    }
+    .whyCard {
+        height: 29vh;
+        width: 70%;
+        margin-top: 2px;
+    }
+
+    .whyCardf {
+        font-size: large;
+    }
+    .cardDiv {
+        display: block;
+        margin-top: 15px;
+    }
 }
