--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -64,14 +64,14 @@
     margin-left: 30%;
     
 }
-@media (max-width:600px) {
+@media (max-width:576px) {
     .footer {
         height: auto;
         /* padding: 0; */
         display: block;
-        padding: 2%;
+        padding: 2%; 
+        width: 171.5%;
     }
-
     .copy {
         margin-left: 15%;
         margin-top: -10%;
@@ -114,6 +114,149 @@
         margin-top: 10%;
         /* margin: 0; */
         width: 100%;
+        text-align: center;
+    }
+    .imgs {
+        width: 60%;
+        margin-left: 20%;
+    }
+    .imgs1 {
+        width: 64%;
+        margin-top: -2%;
+        margin-left: 32%;
+    }
+
+    .signup {
+        margin-left: 0;
+        margin-top: 10%;
+        margin-right: 0%;
+    }
+    
+}
+
+@media (min-width:577px)and(max-width:767px) {
+    .footer {
+        height: auto;
+        /* padding: 0; */
+        display: block;
+        padding: 2%; 
+        width: 171.5%;
+    }
+    .copy {
+        margin-left: 15%;
+        margin-top: -10%;
+    }
+    .signup {
+        margin-left: -95%;
+        width: 70%;
+        margin-top: 62%;
+    }
+
+    .input {
+        padding: 5px;
+        width: 50%;
+    }
+    .submit {
+        padding: 5px;
+        margin-left: 5%;
+    }
+    .contacty {
+        margin-top: 15%;
+        margin-left: -262.5%;
+        width: 25%;
+    }
+    .platform2 {
+        width: 100%;
+        text-align: center;
+        margin: 0;
+    }
+    
+    .noshow {
+        margin-left: -1%;
+        width: 100%;
+        text-align: center;
+    }
+    .unite {
+        display: block;
+    }
+    .platform {
+        margin-left: -1%;
+        margin-top: 10%;
+        /* margin: 0; */
+        width: 100%;
+        text-align: center;
+    }
+    .imgs {
+        width: 60%;
+        margin-left: 20%;
+    }
+    .imgs1 {
+        width: 64%;
+        margin-top: -2%;
+        margin-left: 32%;
+    }
+
+    .signup {
+        margin-left: 0;
+        margin-top: 10%;
+        margin-right: 0%;
+    }
+    
+}
+
+@media (max-width:992px) {
+    .footer {
+        height: auto;
+        /* padding: 0; */
+        display: flex;
+        padding: 2%; 
+        width: 171.5%;
+    }
+    .copy {
+        margin-left: 15%;
+        margin-top: -10%;
+    }
+    .signup {
+        margin-left: -95%;
+        width: 70%;
+        margin-top: 62%;
+    }
+
+    .input {
+        padding: 5px;
+        width: 50%;
+    }
+    .submit {
+        padding: 5px;
+        margin-left: 5%;
+    }
+    .contacty {
+        margin-top: 15%;
+        margin-left: -262.5%;
+        width: 25%;
+    }
+    .platform2 {
+        width: 50%;
+        text-align: center;
+        margin: 0;
+        font-size: large;
+
+    }
+    
+    .noshow {
+        margin-left: -1%;
+        width: 50%;
+        text-align: center;
+        font-size: large;
+
+    }
+    .unite {
+        display: flex;
+    }
+    .platform {
+        margin-left: -1%;
+        width: 50%;
+        font-size: large;
         text-align: center;
     }
     .imgs {
