--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -81,26 +81,26 @@ line-height: normal;
     .welcome {
         font-size:170%;
         margin-left: -15%;
-        margin-top: 35%;
+        margin-top: 30%;
     }
 
     .explore {
         margin-left: -15%;
-        font-size: 100%;
-        /* margin-top: ; */
+        font-size: 105%;
+        margin-top: -5%;
         padding: 4%;
         text-align: center;
     }
 
     .startbtn {
         margin-left: -20%;
-        margin-top: -20%;
+        margin-top: -10%;
     }
 
     .whydibest {
         margin-left: 0%;
-        width: 100%;
-        height: 75vh;
+        width: 108.5%;
+        height: 45vh;
         margin-top: -12%;
         display: block;
         padding: 1%;
@@ -112,7 +112,7 @@ line-height: normal;
     }
     .whyCard {
         height: 29vh;
-        width: 70%;
+        width: 44%;
         margin-top: 2px;
     }
 
@@ -120,13 +120,13 @@ line-height: normal;
         font-size: large;
     }
     .cardDiv {
-        display: block;
+        display: flex;
         margin-top: 15px;
     }
     
 }
 
-@media (max-width:425px) {
+@media (min-width:577px) and (max-width:767px) {
     .buttonCont {
         padding: 7px 8px;
     }
@@ -147,12 +147,12 @@ line-height: normal;
 
     .startbtn {
         margin-left: -20%;
-        margin-top: -20%;
+        margin-top: -10%;
     }
 
     .whydibest {
         margin-left: 0%;
-        width: 100%;
+        width: 120%;
         height: 75vh;
         margin-top: -12%;
         display: block;
@@ -177,3 +177,109 @@ line-height: normal;
         margin-top: 15px;
     }
 }
+
+@media (min-aspect-ratio: 21/9) and (max-aspect-ratio: 720px) {
+    .buttonCont {
+        padding: 7px 8px;
+    }
+
+    .welcome {
+        font-size:170%;
+        margin-left: -15%;
+        margin-top: 35%;
+    }
+
+    .explore {
+        margin-left: -15%;
+        font-size: 100%;
+        /* margin-top: ; */
+        padding: 4%;
+        text-align: center;
+    }
+
+    .startbtn {
+        margin-left: -20%;
+        margin-top: -10%;
+    }
+
+    .whydibest {
+        margin-left: 0%;
+        width: 150%;
+        height: 75vh;
+        margin-top: -12%;
+        display: block;
+        padding: 1%;
+    }
+    
+    .whyText {
+        font-size: 1em;
+        padding: 0;
+    }
+    .whyCard {
+        height: 29vh;
+        width: 70%;
+        margin-top: 2px;
+    }
+
+    .whyCardf {
+        font-size: large;
+    }
+    .cardDiv {
+        display: block;
+        margin-top: 15px;
+    }
+}
+@media (max-width: 992px) {
+    .buttonCont {
+        padding: 7px 8px;
+    }
+
+    .welcome {
+        font-size:170%;
+        margin-left: -15%;
+        margin-top: 35%;
+    }
+
+    .explore {
+        margin-left: -15%;
+        font-size: 100%;
+        /* margin-top: ; */
+        padding: 4%;
+        text-align: center;
+    }
+
+    .startbtn {
+        margin-left: -20%;
+        margin-top: -10%;
+    }
+
+    .whydibest {
+        margin-left: 0%;
+        width: 171.5%;
+        height: 79vh;
+        margin-top: -12%;
+        display: block;
+        padding: 1%;
+    }
+    
+    .whyText {
+        font-size: 1.5em;
+        padding: 0;
+    }
+    .whyCard {
+        height: 29vh;
+        width: 70%;
+        margin-top: 2px;
+    }
+
+    .whyCardf {
+        font-size: xx-large;
+    }
+    .whyCardt {
+        font-size: xx-large;
+    }
+    .cardDiv {
+        display: block;
+        margin-top: 15px;
+    }
+  }
