--- a/src/components/DiBestSpot.css
+++ b/src/components/DiBestSpot.css
@@ -1,6 +1,6 @@
 .buttonCont {
     width: 100%;
-    height:670px;
+    /* height:670px; */
     padding: 49px 7px 7px 8px;
     justify-content: flex-end;
     align-items: center;
@@ -35,11 +35,11 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 @media (max-width:600px) {
-    .btnFather {
+    /* .btnFather {
         display: block;
-    }
+    } */
 
     .buttonCont {
-        height: 150vh;
+        /* height: 150vh; */
     }
 }
