--- a/src/components/Testimonial.css
+++ b/src/components/Testimonial.css
@@ -1,9 +1,9 @@
 .testimonial {
     background-color: #A78236;
-    height: 688px;
+    /* height: 688px; */
     width: auto;
     display: block;
-    margin-top: 5%;
+    /* margin-top: 5%; */
     padding: 2%;
 }
 
@@ -25,7 +25,7 @@
     align-items: flex-start;
     gap: 8px;
     height: 40%;
-    width: 30%;
+    /* width: 30%; */
     border-radius: 0px 15px 15px 15px;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -37,7 +37,7 @@
     align-items: flex-start;
     gap: 8px;
     height: 30%;
-    width: 30%;
+    /* width: 30%; */
     border-radius: 0px 15px 15px 15px;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -49,7 +49,7 @@
     align-items: flex-start;
     gap: 8px;
     height: 30%;
-    width: 30%;
+    /* width: 30%; */
     border-radius: 0px 15px 15px 15px;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -61,7 +61,7 @@
     align-items: flex-start;
     gap: 8px;
     height: 30%;
-    width: 30%;
+    /* width: 30%; */
     border-radius: 0px 15px 15px 15px;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -80,7 +80,7 @@
 @media (max-width:600px) {
     .testimonial {
         display: block;
-        height: 130vh;
+        /* height: 130vh; */
     }
 
     .testyCard {
