--- a/src/components/join.css
+++ b/src/components/join.css
@@ -1,106 +1,113 @@
 .joinDB {
-    height: 565px;
-    margin-top: 5%;
-    display: flex;
-    padding: 3%;
+  /* height: 565px; */
+  margin-top: 5%;
+  display: flex;
+  padding: 3%;
 }
 
 .joinTxt {
-    color: #28285B;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    align-self: center;
-    text-align: center;
-    justify-content: center;
-    margin-left: 10%;
+  color: #28285b;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  align-self: center;
+  text-align: center;
+  justify-content: center;
+  margin-left: 10%;
 }
 
-
 .shop {
-    height: 25vh;
-    width: 60%;
-    padding: 25px;
-    color: #0D0D0D;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 400;
-    margin-left: 30%;
-    line-height: normal;
-
+  /* height: 25vh; */
+  /* height: 50%; */
+  /* width: 60%; */
+  padding: 25px;
+  color: #0d0d0d;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  /* margin-left: 30%; */
+  line-height: normal;
 }
 
 .shop1 {
-    height: 25vh;
-    width: 100%;
-    padding: 20px;
-    color: #0D0D0D;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  /* height: 25vh; */
+  /* height: 50%; */
+  width: 95%;
+  padding: 20px;
+  color: #0d0d0d;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .shop2 {
-    height: 25vh;
-    width: 100%;
-    padding: 20px;
-    color: #0D0D0D;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  /* height: 25vh; */
+  /* width: 100%; */
+  /* height: 50%; */
+  padding: 20px;
+  color: #0d0d0d;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .shop3 {
-    height: 25vh;
-    width: 60%;
-    padding: 25px;
-    color: #0D0D0D;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-left: 30%;
+  /* height: 25vh; */
+  /* height: 50%; */
+  /* width: 60%; */
+  padding: 25px;
+  color: #0d0d0d;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  /* margin-left: 30%; */
 }
 
 .shopimg {
-    height: 20vh;
+  /* height: 20vh; */
+  height: 12rem;
 }
 .shopimg1 {
-    height: 20vh;
-    width: 15vh;
+  /* height: 20vh; */
+  /* height: 40%; */
+  height: 12rem;
+  /* width: 15vh; */
 }
 
 .middleJoin {
-    display: flex;
-    margin-left: 10%;
+  display: flex;
+  /* margin-left: 10%; */
 }
 
 .missOut {
-    padding: 6%;
-    text-wrap: wrap;
-    color: #000;
-    text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  padding: 6%;
+  text-wrap: wrap;
+  color: #000;
+  text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
-
-@media (max-width: 600px) {
-    .joinDB {
-        display: block;
-        height: 180vh;
-    }
+/* @media (max-width: 600px) {
+   
 
     .joinTxt {
         font-size: large;
@@ -135,9 +142,7 @@
     }
    
 
-    .middleJoin {
-        display: block;
-    }
+   
 
     .shopimg {
         width:100% ;
@@ -158,4 +163,4 @@
         line-height: normal;
     }
     
-}
+} */
