--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -6,7 +6,7 @@ font-size: 18px;
 font-style: normal;
 font-weight: 300;
 line-height: normal;
-width: 1293px;
+/* width: 1293px; */
 height: 332px;
 flex-shrink: 0;
 margin-top: 1%;
@@ -41,7 +41,7 @@ font-size: 20px;
 font-style: normal;
 font-weight: 400;
 line-height: normal;
-width: 729px;
+/* width: 729px; */
 }
 
 .mainOffer {
