--- a/src/pages/Features.css
+++ b/src/pages/Features.css
@@ -1,13 +1,13 @@
 
 
 .keyFeature {
-    color: #000;
+    /* color: #000;
 font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 font-size: 30px;
 font-style: normal;
 font-weight: 600;
-line-height: normal;
-margin-top: 15%;
+line-height: normal; */
+/* margin-top: 15%; */
 }
 
 .featureCard {
@@ -15,7 +15,7 @@ margin-top: 15%;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 30%;
+    /* gap: 30%; */
 }
 
 @media (max-width:600px) {
