--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -75,7 +75,7 @@
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 425px) {
     
     .buttonCont {
         padding: 7px 8px;
@@ -84,13 +84,13 @@
   .welcome {
     font-size: 170%;
     margin-left: -15%;
-    margin-top: 35%;
+    margin-top: -35%;
   }
 
   .explore {
     margin-left: -15%;
-    font-size: 100%;
-    /* margin-top: ; */
+    font-size: 90%;
+    margin-top: -10%;
     padding: 4%;
     text-align: center;
   }
@@ -98,6 +98,7 @@
     .startbtn {
         margin-left: -20%;
         margin-top: -10%;
+        box-shadow: 1px 1px 1px rgb(73, 72, 72);
     }
 
     .whydibest {
@@ -112,124 +113,29 @@
     .whyText {
         font-size: 1em;
         padding: 0;
+        margin-top: 30%;
+        margin-left: 35%;
     }
     .whyCard {
         height: 29vh;
-        width: 70%;
-        margin-top: 2px;
-    }
-
-    .whyCardf {
-        font-size: large;
-    }
-    .cardDiv {
-        display: block;
-        margin-top: 15px;
-    }
-}
-
-@media (min-aspect-ratio: 21/9) and (max-aspect-ratio: 720px) {
-    .buttonCont {
-        padding: 7px 8px;
-    }
-
-  .welcome {
-    font-size: 170%;
-    margin-left: -15%;
-    margin-top: 35%;
-  }
-
-  .explore {
-    margin-left: -15%;
-    font-size: 100%;
-    /* margin-top: ; */
-    padding: 4%;
-    text-align: center;
-  }
-
-    .startbtn {
-        margin-left: -20%;
-        margin-top: -20%;
-    }
-
-    .whydibest {
-        margin-left: 0%;
         width: 100%;
-        height: 75vh;
-        margin-top: -12%;
-        display: block;
-        padding: 1%;
-    }
-    
-    .whyText {
-        font-size: 1em;
-        padding: 0;
-    }
-    .whyCard {
-        height: 29vh;
-        width: 70%;
         margin-top: 2px;
+        margin-left: 2px;
     }
 
     .whyCardf {
-        font-size: large;
-    }
-    .cardDiv {
-        display: block;
-        margin-top: 15px;
-    }
-}
-@media (max-width: 992px) {
-    .buttonCont {
-        padding: 7px 8px;
-    }
-
-    .welcome {
-        font-size:170%;
-        margin-left: -15%;
-        margin-top: 35%;
-    }
-
-    .explore {
-        margin-left: -15%;
-        font-size: 100%;
-        /* margin-top: ; */
-        padding: 4%;
-        text-align: center;
-    }
-
-    .startbtn {
-        margin-left: -20%;
-        margin-top: -10%;
-    }
-
-    .whydibest {
-        margin-left: 0%;
-        width: 171.5%;
-        height: 79vh;
-        margin-top: -12%;
-        display: block;
-        padding: 1%;
-    }
-    
-    .whyText {
-        font-size: 1.5em;
-        padding: 0;
-    }
-    .whyCard {
-        height: 29vh;
-        width: 70%;
-        margin-top: 2px;
-    }
-
-    .whyCardf {
-        font-size: xx-large;
+        font-size: 15px;
     }
     .whyCardt {
-        font-size: xx-large;
+      font-size: 12px;
+      font-weight: 900;
     }
     .cardDiv {
-        display: block;
+        display: flex;
         margin-top: 15px;
+        width: auto;
     }
-  }
+    
+}
+
+
